[style] code formatting(naver intellij formatting)